fixed soc.media icons, changed background colors, fixed responsiveness on mobile

--- a/docs/src/style.css
+++ b/docs/src/style.css
@@ -26,6 +26,8 @@ body {
 
 .about-me {
 	height: 30%;
+	overflow:hidden;
+	background-color: #555753;
 }
 
 .about-me-img {
@@ -43,8 +45,8 @@ body {
 }
 
 .social-media-icon {
-	width: auto;
-	height: auto;
-	max-width: 100%;
-	max-height: 100%;
+	width: 48px;
+	height:48px;
+/* 	max-width: 100%; */
+/* 	max-height: 100%; */
 }
